# proc-gen-castles

./: .gitignore  CMakeLists.txt  README.md  Wave Function Collapse Rules.docx
resources/assets/castle-old/Models/: bridge.fbx  flagWhite.fbx  metalGate.fbx  shieldRed.fbx  siegeRam.fbx  siegeTower.fbx  sword.fbx  towerBalcony.fbx  towerSquareArch.fbx  towerSquareBaseColor.fbx  towerSquareMidOpenHalf.fbx  towerSquarePoles.fbx  towerSquareRoof.fbx  towerTop.fbx  towerTopCorner.fbx  wall.fbx  wallCorner.fbx  wallCornerHalf.fbx  wallDoor.fbx  wallHalf.fbx  wallNarrowCorner.fbx  wallNarrowGate.fbx  wallStud.fbx  wallToNarrow.fbx
resources/assets/castle/Models/: flagBannerLong.fbx  flagBannerShort.fbx  flagWhiteWide.fbx  gate.fbx  knightBlue.fbx  shieldBlue.fbx  siegeCatapult.fbx  siegeTrebuchet.fbx  stairsStoneSlant.fbx  towerBase.fbx  towerSquare.fbx  towerSquareBase.fbx  towerSquareMidOpen.fbx  towerSquareTop.fbx  towerSquareTopColor.fbx  wallCornerHalfTower.fbx  wallNarrowStairs.fbx  wallNarrowStairsFence.fbx  wallNarrowWoodFence.fbx
resources/assets/castle_retro/: License.txt
resources/assets/kenney_castle-kit/Models/: door.fbx  flagBlue.fbx  flagBlueWide.fbx  king.fbx  (+13 more)
resources/shaders/: default.frag  default.vert  texture.frag  texture.vert
scenefiles/illuminate/extra_credit/: depth_of_field.json  refract1.json  refract2.json
scenefiles/intersect/extra_credit/: bunny_mesh.json  mesh.json  recursive_sphere_2_supersample.json
scenefiles/intersect/extra_credit_outputs/: _output_explanations.txt
scenefiles/intersect/optional/: primitive_salad_1.json  recursive_sphere_10.json  recursive_sphere_5.json  recursive_sphere_8.json  recursive_sphere_9.json
scenefiles/intersect/required/: ambient_total.json  diffuse_total.json  specular_total.json
scenefiles/intersect/required_outputs/: _output_explanations.txt
scenefiles/lights-camera/optional/: primitive_salad_2.json  recursiveCones4.json  recursiveCubes4.json  recursive_sphere_2.json  recursive_sphere_3.json  recursive_sphere_4.json  recursive_sphere_6.json  recursive_sphere_7.json
scenefiles/lights-camera/required/: unit_cone_cap.json
src/: debug.h  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/procedural/: cell.cpp  cell.h  graph.cpp  graph.h  grid.cpp  grid.h  layoutgenerator.h  proceduralcastle.cpp  proceduralcastle.h  tile.cpp  tile.h  wfc.cpp  wfc.h
src/procedural/algorithms/: lsystem.cpp  lsystem.h  lsystemstructuretypes.h
src/scene/: meshprimitive.cpp  meshprimitive.h  primitivetypes.h  scene.cpp  scene.h  scenedata.h  sceneobject.cpp  sceneobject.h  sceneprimitive.cpp  sceneprimitive.h
src/splines/: animationtrack.cpp  animationtrack.h  cameraparams.h  cameratrack.cpp  cameratrack.h  cameratracksegment.cpp  cameratracksegment.h  easefunctions.h  spline.cpp  spline.h  tracksegment.cpp  tracksegment.h
src/textures/: defaultmaterials.h  texturedata.h  texturetypes.h
src/utils/: camera.cpp  camera.h  renderobject.cpp  renderobject.h  scenedata.h  sceneloader.h
src/utils/aspectratiowidget/: aspectratiowidget.hpp
(+166 files in other folders)
